# platformer-game

./: .gitignore  CMakeLists.txt
backup/: Collider.cpp  Collider.hpp
include/: StartScene.hpp  nextScene.hpp
include/Components/: Block.hpp  Entity.hpp  Tile.hpp
include/ECS/: Component.hpp  ECS.hpp  System.hpp
include/Engine/: AssetManager.hpp  Collider.hpp  Game.hpp  Log.hpp  Scene.hpp  SceneManager.hpp
include/Scenes/: StartScene.hpp
libs/SFML/lib/: libsfml-graphics.so.2.5.1
libs/SFML/lib/pkgconfig/: sfml-graphics.pc  sfml-network.pc  sfml-system.pc  sfml-window.pc
src/: StartScene.cpp  main.cpp  nextScene.cpp
src/Components/: Block.cpp  Entity.cpp  Tile.cpp
src/ECS/: Component.cpp  Component.hpp  ECS.cpp  ECS.hpp  System.cpp  System.hpp
src/Engine/: AssetManager.cpp  Collider.cpp  Game.cpp  Log.cpp  SceneManager.cpp
src/Game/: Game.cpp  Game.hpp
src/Game/Scenes/: StartScene.cpp  StartScene.hpp  nextScene.cpp  nextScene.hpp
src/Scenes/: StartScene.cpp
src/core/: AssetManager.cpp  AssetManager.hpp  Log.cpp  Log.hpp  Scene.hpp  SceneManager.cpp  SceneManager.hpp
